# feather-reader

./: .dockerignore  .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  fly.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  codeql.yml  dependency-review.yml  release-crate.yml  release-image.yml  scorecard.yml
bot/: .gitignore  Cargo.toml  README.md  deny.toml
bot/src/: app.rs  atproto.rs  config.rs  main.rs  messages.rs  store.rs
deploy/: Caddyfile  container-entrypoint.sh  teardown.md  teardown.sh
design/: DESIGN.md
design/architecture/: README.md  ownership.mmd  runtime.mmd
design/mockups/: add-feed.html  feather.css  keyboard.js  landing.html  list.html  reader.html  signin.html
oauth-sidecar/: .env.example  .gitignore  .oxlintrc.json  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
oauth-sidecar/src/: collections.ts  config.ts  crypto.ts  oauth.ts  server.ts  stores.ts
oauth-sidecar/test/: collections.test.ts  config.test.ts  crypto.test.ts  stores.test.ts
scripts/: ci.sh
src/: atproto.rs  config.rs  feed.rs  lexicon.rs  lib.rs  main.rs  net.rs  opml.rs  scheduler.rs  store.rs  web.rs
static/: keyboard.js  style.css
templates/: about.html  base.html  beta_redeem.html  entry.html  entry_actionbar.html  entry_row.html  feed_item.html  footer.html  index.html  landing.html  login.html  manage.html  manage_row.html  overlay.html  rail.html
