[package]
name = "feather-reader"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A minimalist, atproto-native RSS/Atom reader in Rust — your feed subscriptions live in your own PDS."
authors = ["Justin Stanley"]
license = "AGPL-3.0-only"
repository = "https://github.com/justin-stanley/feather-reader"
homepage = "https://reader.justin-stanley.com"
readme = "README.md"
keywords = ["rss", "atom", "atproto", "feed", "reader"]
categories = ["web-programming"]

[dependencies]
